force-app/main/default/objects/HI_New_Plans_Application__c/fields/Company_Information__c.field-meta.xml
<CustomField>
    <fullName>Company_Information__c</fullName>
    <label>Company Information</label>
    <length>124000</length>
    <type>LongTextArea</type>
</CustomField>