force-app/main/default/objects/HI_New_Plans_Application__c/fields/Dismissal_Reason__c.field-meta.xml
<CustomField>
    <fullName>Dismissal_Reason__c</fullName>
    <description>This field captures dismissal reason for New Plan Applications in Hippo</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Dismissal Reason</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>