force-app/main/default/objects/HI_New_Plans_Application__c/fields/FSA_DCA_Selected__c.field-meta.xml
<CustomField>
    <fullName>FSA_DCA_Selected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FSA DCA Selected</label>
    <type>Checkbox</type>
</CustomField>