force-app/main/default/objects/HI_New_Plans_Application__c/fields/Quotable_Dependents__c.field-meta.xml
<CustomField>
    <fullName>Quotable_Dependents__c</fullName>
    <label>Quotable Dependents</label>
    <length>124000</length>
    <type>LongTextArea</type>
</CustomField>