force-app/main/default/objects/HI_New_Plans_Application__c/fields/Requested_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Requested_Start_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Requested Start Date</label>
    <type>Date</type>
</CustomField>