force-app/main/default/objects/HI_New_Plans_Application__c/fields/Updated_At__c.field-meta.xml
<CustomField>
    <fullName>Updated_At__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Updated At</label>
    <type>DateTime</type>
</CustomField>